<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">4pda</string>
    <string name="loading">Загрузка...</string>
    <string name="Forums">Форумы</string>
    <string name="pull_to_refresh_pull_label">Оттяни для обновления...</string>
    <string name="pull_to_refresh_release_label">Брось для обновления...</string>
    <string name="pull_to_refresh_refreshing_label">Обновление...</string>
    <string name="adv_form">Расш. форма</string>
    <string name="advanced_form">Расш. форма</string>
    <string name="app_description">Неофициальный клиент для сайта 4pda.ru</string>
    <string name="search_keyword">Ключевое слово</string>
    <string name="File">Файл</string>
    <string name="Image">Изображение</string>
    <string name="Multiuploading">Мультизагрузка</string>
    <string name="ClaimText_">Введите текст жалобы:</string>
    <string name="ClaimDescription">Примечание: вам не нужно указывать здесь тему и сообщение,
        модератор автоматически получит эту информацию.

        Пожалуйста, используйте эту возможность форума только для жалоб о некорректном сообщении!
        Для связи с модератором используйте личные сообщения.
    </string>
    <string name="BrowserView">Вид как в браузере</string>
    <string name="Recipient_">Получатель:</string>
    <string name="EditReason">Причина редактирования</string>
    <string name="Smiles">Смайлы</string>
    <string name="Sign">Подпись</string>
    <string name="OpenIn_">Открыть в...</string>
    <string name="Share">Поделиться ссылкой</string>
    <string name="CopyLink">Скопировать ссылку</string>
    <string name="CreateNote">Создать заметку</string>
    <string name="LoadMore">Загрузить еще</string>
    <string name="UserNameLogin">Имя пользователя (login)</string>
    <string name="Password">Пароль</string>
    <string name="Stealth">Скрытность</string>
    <string name="Author_">Автор:</string>
    <string name="ReceiversNames">Имена получателей</string>
    <string name="MessageSubject">Заголовок сообщения</string>
    <string name="Comment_">Комментарий:</string>
    <string name="EnterSubject_">Введите тему...</string>
    <string name="EnterMessage_">Введите сообщение...</string>
    <string name="Message">Сообщение</string>
    <string name="Whom">Кому</string>
    <string name="User__">Пользователь: </string>
    <string name="EditReason__">Причина изменения: </string>
    <string name="AuthorLogin">Логин автора</string>
    <string name="SearchInTopic">Искать в теме</string>
    <string name="Search">Искать</string>
    <string name="SortBy">Сортировать по</string>
    <string name="AllForums">Все форумы</string>
    <string name="Subforums">Искать в подфорумах?</string>
    <string name="ResultsInTopicsView">Результаты в виде тем</string>
    <string name="Keywords">Ключевые слова</string>
    <string name="Keyword">Ключевое слово</string>
    <string name="PageNumber">Номер страницы</string>
    <string name="DontNotify">Не уведомлять</string>
    <string name="NotificationWithDelay">Уведомление с задержкой</string>
    <string name="ImmediateNotification">Немедленное уведомление</string>
    <string name="DailyNotify">Ежедневное уведомление</string>
    <string name="WeaklyNotify">Еженедельное уведомление</string>
    <string name="Templates">Шаблоны</string>
    <string name="TemplateName">Имя шаблона</string>
    <string name="SearchText">Текст поиска</string>
    <string name="_Smiles"> Смайлы</string>
    <string name="All_0">Всего: 0</string>
    <string name="Send">Отправить</string>
    <string name="UnknownTemplate">Неизвестный шаблон</string>
    <string name="Connecting">Подключение</string>
    <string name="Downloading">Загрузка</string>
    <string name="DownloadingComplete">Загрузка завершена</string>
    <string name="DownloadingCanceled">Загрузка отменена</string>
    <string name="UnknownError">Неизвестная ошибка</string>
    <string name="DownloadError">Ошибка загрузки</string>
    <string name="Unknown">Неизвестно</string>
    <string name="InsertNick">Вставить ник</string>
    <string name="MessagesQms">Сообщения (QMS)</string>
    <string name="Profile">Профиль</string>
    <string name="FindUserTopics">Темы пользователя</string>
    <string name="FindUserPosts">Сообщения пользователя</string>
    <string name="SelectAnAction">Выберите действие</string>
    <string name="OpenWith">Открыть с</string>
    <string name="NewDialog">Новый диалог</string>
    <string name="AllDialogs">Все диалоги</string>
    <string name="Change">Изменить</string>
    <string name="ChangeReputationRequest">Запрос на изменение репутации отправлен</string>
    <string name="ChangeReputationError">Ошибка изменения репутации</string>
    <string name="Reputation">Репутация</string>
    <string name="Logout">Выход (Logout)</string>
    <string name="Login">Вход</string>
    <string name="Registration">Регистрация</string>
    <string name="SendBy_">Отправить через..</string>
    <string name="Loading_">Загрузка...</string>
    <string name="Canceled">Отменено</string>
    <string name="CheckConnection">Проверьте подключение</string>
    <string name="Repeat">Повторить</string>
    <string name="Error">Ошибка</string>
    <string name="SendReport">Послать отчёт</string>
    <string name="DownloadComplete">Загрузка завершена</string>
    <string name="Loading">Загрузка...</string>
    <string name="NewNote">Новая заметка</string>
    <string name="Save">Сохранить</string>
    <string name="NoteSaved">Заметка сохранена</string>
    <string name="Choice">Выбор</string>
    <string name="DonateAccountNimberCopied">Номер счёта скопирован в буфер обмена</string>
    <string name="DonatePurseCopied">Номер кошелька скопирован в буфер обмена</string>
    <string name="ThanksForDonate">Спасибо за поддержку проекта!</string>
    <string name="ConfirmTheAction">Подтвердите действие</string>
    <string name="Delete">Удалить</string>
    <string name="SureDeleteFile">Вы действительно хотите удалить файл?</string>
    <string name="CookiesFileNotFound">Файл cookies не найден</string>
    <string name="CookiesFileDeleted">Файл cookies удален</string>
    <string name="FailedDeleteCookies">Не удалось удалить файл cookies</string>
    <string name="ChangesHistory">История изменений</string>
    <string name="Recomend">Рекомендую установить программу 4pda</string>
    <string name="RecommendText">Привет, я использую 4pda, это первый android-клиент для лучшего
        сайта о мобильных устройствах 4PDA.
    </string>
    <string name="NeedToLogin">Необходимо залогиниться!</string>
    <string name="RaiseReputation">Поднять репутацию</string>
    <string name="FailedToCreateFolderInPath">Не удалось создать папку по указанному пути</string>
    <string name="FailedToCreateFileInPath">Не удалось создать файл по указанному пути</string>
    <string name="AcceptStyle">Применить стиль</string>
    <string name="ChooseStyle">Выберите стиль</string>
    <string name="Information">Информация</string>
    <string name="StyleDoesNotContainDesc">Стиль не содержит описания</string>
    <string name="Views">Просмотры</string>
    <string name="Comments">Комментарии</string>
    <string name="Friends">Друзья</string>
    <string name="OpenInBrowser">Открыть в браузере</string>
    <string name="OpenLinkInBrowser">Открыть ссылку в браузере?</string>
    <string name="Open">Открыть</string>
    <string name="SubscriveToTopic">Подписка на тему</string>
    <string name="Subscribe">Подписаться</string>
    <string name="SubscriptionRequestSent">Запрос на подписку отправлен</string>
    <string name="ErrorSubscription">Ошибка подписки</string>
    <string name="UnSubscriptionRequestSent">Запрос на отписку отправлен</string>
    <string name="DownloadAborted">Загрузка прервана</string>
    <string name="DownloadFile">Скачивание файла</string>
    <string name="profile">профиль</string>
    <string name="All">Всего</string>
    <string name="navigate_getfirstpost">К первому</string>
    <string name="navigate_getlastpost">К последнему</string>
    <string name="navigate_getnewpost">К первому непрочитанному</string>
    <string name="AddToFavorites">Добавить в избранное</string>
    <string name="AddingToFavorites">Добавление в избранное</string>
    <string name="DeletingFromFavorites">Удаление из избранного</string>
    <string name="DeleteFromFavorites">Удалить из избранного</string>
    <string name="Unsubscribe">Отписаться</string>
    <string name="OpenTopicForum">Открыть форум темы</string>
    <string name="NotesByTopic">Заметки по теме</string>
    <string name="Settings">Настройки</string>
    <string name="Refresh">Обновить</string>
    <string name="Downloads">Загрузки</string>
    <string name="More">Другое..</string>
    <string name="CloseApp">Закрыть программу</string>
    <string name="guest">гость</string>
    <string name="SupportTheDeveloper">Поддержать разработчика</string>
    <string name="GiveBeer">Дать разработчику на пиво</string>
    <string name="ImproveMood">Улучшить настроение разработчику</string>
    <string name="Attaches">Вложения</string>
    <string name="FindOnPage">Найти на странице</string>
    <string name="FindInTopic">Найти в этой теме</string>
    <string name="Write">Написать</string>
    <string name="Browser">Браузер</string>
    <string name="DoComment">Комментировать</string>
    <string name="DoScale">Масштабировать</string>
    <string name="RememberScale">Запомнить масштаб</string>
    <string name="LoadImages">Загружать изображения</string>
    <string name="Close">Закрыть</string>
    <string name="LeaveComment">Оставить комментарий</string>
    <string name="Like">Понравилось</string>
    <string name="Cancel">Отмена</string>
    <string name="client_player">Плеер клиента</string>
    <string name="system_player">Проигрыватель системы</string>
</resources>