<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5dip">

    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:capitalize="sentences"
        android:singleLine="true"
        android:hint="@string/Whom"
        android:padding="5dip"

        >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:capitalize="sentences"
        android:singleLine="true"

        android:hint="@string/EnterSubject_"

        android:padding="5dip"
        android:textCursorDrawable="@null">

        <requestFocus />
    </EditText>

    <EditText

        android:padding="5dip"

        android:hint="@string/EnterMessage_"
        android:id="@+id/message"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomPanel"
        android:layout_below="@+id/topPanel"
        android:capitalize="sentences"
        android:gravity="top"
        android:minLines="10"
        android:scrollHorizontally="false"

        android:singleLine="false">

        <requestFocus />
    </EditText>

</LinearLayout>