<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:id="@+id/lnrSettings"

            android:padding="5dip"
            android:shrinkColumns="1"
            android:stretchColumns="1">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/shablons_row">

                <TextView
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Templates" />

                <Spinner
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spnrTemplates"
                    android:entries="@array/themesTemplatesArray"
                    android:entryValues="@array/themesTemplatesValues" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name_row">

                <TextView
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TemplateName" />

                <EditText
                    android:id="@+id/template_name_edit"
                    android:singleLine="true"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:minWidth="250dip"
                    android:scrollHorizontally="true"
                    android:capitalize="none"
                    android:layout_marginTop="2dip"
                    android:layout_marginLeft="2dip"
                    android:layout_marginRight="2dip"
                    android:padding="8dip"

                    android:autoText="false" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/query_row">

                <TextView
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/SearchText" />

                <EditText
                    android:id="@+id/query_edit"
                    android:singleLine="true"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:minWidth="250dip"
                    android:scrollHorizontally="true"
                    android:capitalize="none"
                    android:layout_marginTop="2dip"
                    android:layout_marginLeft="2dip"
                    android:layout_marginRight="2dip"
                    android:padding="8dip"

                    android:autoText="false" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/username_row">

                <TextView
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/AuthorLogin" />

                <EditText
                    android:id="@+id/username_edit"
                    android:singleLine="true"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:minWidth="250dip"
                    android:scrollHorizontally="true"


                    android:layout_marginTop="2dip"
                    android:layout_marginLeft="2dip"
                    android:layout_marginRight="2dip"
                    android:textCursorDrawable="@null"
                    android:padding="8dip"


                    android:autoText="false" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/source_row">

                <TextView
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Search" />

                <Spinner
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spnrSource"
                    android:entries="@array/SearchSourceArray"
                    android:entryValues="@array/SearchSourceValues" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sort_row">

                <TextView
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/SortBy" />

                <Spinner
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spnrSort"
                    android:entries="@array/SearchSortArray"
                    android:entryValues="@array/SearchSortValues" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/forums_row">

                <TextView
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Forums" />

                <Button
                    android:id="@+id/btnAddForum"
                    android:text="@string/AllForums"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/subforums_row">

                <CheckBox
                    android:id="@+id/chkSubforums"
                    android:layout_span="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/Subforums"
                    android:paddingLeft="50dip" />
            </TableRow>
        </TableLayout>
    </ScrollView>
</LinearLayout>