<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ProgressBar
        android:id="@+id/progress_search"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtpost_edit_reason"
        android:layout_below="@+id/topPanel"
        android:visibility="gone" />

    <EditText
        android:id="@+id/txtPost"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/txtpost_edit_reason"
        android:layout_below="@+id/topPanel"
        android:capitalize="sentences"
        android:gravity="top"
        android:minLines="10"
        android:scrollHorizontally="false"
        android:singleLine="false">


    </EditText>

    <EditText
        android:id="@+id/txtpost_edit_reason"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottomPanel"
        android:visibility="gone"
        android:hint="@string/EditReason"
        android:capitalize="sentences"
        android:scrollHorizontally="false"
        android:singleLine="true"></EditText>

    <RelativeLayout
        android:id="@+id/bottomPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:id="@+id/pnlProgress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="false"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:max="100"
                android:layout_alignParentLeft="true"

                android:layout_toLeftOf="@+id/btnCancelLoad" />

            <TextView
                android:id="@+id/progress_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="sometext"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/progress"
                android:layout_alignRight="@+id/progress" />

            <Button
                android:id="@+id/btnCancelLoad"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cancel" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:orientation="horizontal"
            android:layout_below="@+id/pnlProgress">

            <ToggleButton
                android:id="@+id/tglEnableEmo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:checked="true"
                android:layout_alignParentLeft="true"
                android:textOff="@string/Smiles"
                android:textOn="@string/Smiles" />

            <ToggleButton
                android:id="@+id/tglEnableSig"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:checked="true"
                android:textOff="@string/Sign"
                android:textOn="@string/Sign" />
        </LinearLayout>

        <Button
            android:id="@+id/btnAttachments"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="43dip"
            android:layout_margin="0dip"
            android:layout_below="@+id/pnlProgress"
            android:drawableLeft="@drawable/ic_menu_attachment"
            android:text="0" />
    </RelativeLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/tglGallerySwitcher"
            android:layout_width="wrap_content"
            android:layout_height="35dip"
            android:paddingLeft="15dip"
            android:paddingRight="15dip"
            android:paddingTop="3dip"
            android:paddingBottom="6dip"
            android:text=":)" />

        <Gallery
            android:id="@+id/glrBbCodes"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"

            android:spacing="5dip" />

        <Gallery
            android:id="@+id/glrSmiles"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:spacing="5dip"
            android:visibility="gone" />
    </LinearLayout>

</RelativeLayout>